--- a/app/pug/pages/works.pug
+++ b/app/pug/pages/works.pug
@@ -49,6 +49,8 @@ block content
                 if i === 3
                   .slider__desc--btn
                     a(href='./' + links[i] + '/index.html' target="_blank").btn Look Site
+                  .slider__desc--btn
+                    a.btn.without__link PSD File
                 else
                   .slider__desc--btn
                     a(href='./' + links[i] + '/index.html' target="_blank").btn Look Site
