--- a/app/pug/main-layout.pug
+++ b/app/pug/main-layout.pug
@@ -6,18 +6,17 @@ html(lang="en")
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    link(rel="shortcut icon" href="img/favicon/fav_mount.png")
     link(rel="stylesheet" href="./css/style.min.css" type="text/css")
     script(src="./js/svg.js")
-    script(src="./js/activeTheme.js")
     link(rel="preload" href="./fonts/Roboto-Bold.woff2" type="font/woff2" as="font" crossorigin)
     link(rel="preload" href="./fonts/Roboto-Regular.woff2" type="font/woff2" as="font" crossorigin)
     title
       block title
-  body.mountains
+  body.night
     .svg-placeholder
     script document.querySelector('.svg-placeholder').innerHTML = SVG_SPRITE
     .wrapper
       block content
     include ./sections/preloader
-    //script(src="./libs/jQuery/dist/jquery.min.js")
     script(src="./js/scripts.min.js")
