--- a/app/scss/blocks/parallax.scss
+++ b/app/scss/blocks/parallax.scss
@@ -33,7 +33,13 @@
   left: 0;
   width: 100%;
   height: 100%;
+  display: none;
+}
 
+.mountains{
+  .parallax-mount{
+    display: block;
+  }
 }
 
 .parallax-mount__layer{
